# resume-builder

./: .gitignore  README.md  ShelResume 17Jul25 (1).pdf:Zone.Identifier  app.py  main.py  pyproject.toml  requirements.txt  shelResume26May.txt  shel_resume.py
static/: print.css  style.css
templates/: index.html  resume_template.html
