[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "cssselect2==0.8.0",
    "flask==3.1.1",
    "fonttools==4.58.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pillow==11.2.1",
    "pycparser==2.22",
    "pydyf==0.11.0",
    "pyphen==0.17.2",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "weasyprint==65.1",
    "webencodings==0.5.1",
    "werkzeug==3.1.3",
    "zopfli==0.2.3.post1",
]
